@@ -36,7 +36,7 @@ class CModelBehavior extends CBehavior
 	/**
 	 * Responds to {@link CModel::onBeforeValidate} event.
 	 * Overrides this method if you want to handle the corresponding event of the {@link owner}.
-	 * You may set {@link CModelEvent::isValid} to be false if you want to stop the current validation process.
+	 * You may set {@link CModelEvent::isValid} to be false to quit the validation process.
 	 * @param CModelEvent event parameter
 	 */
 	public function beforeValidate($event)
