@@ -13,19 +13,25 @@ Version 1.1a to be released
 
 Version 1.0.7 to be released
 ----------------------------
+- Bug #367: CUploadedFile may fail if a form contains multiple file uploads in different array dimensions (Qiang)
+- Bug #368: CUploadedFile::getInstance() should return null if no file is uploaded (Qiang)
 - Bug #372: CCacheHttpSession should initialize cache first before using it (Qiang)
 - Bug #388: 'params' options passed to linkButton are not cleared after submit (Qiang)
 - Bug #393: Greek language code should be 'el' insead of 'gr' (Qiang)
+- Bug #402: CNumberFormatter does not format decimals and percentages correctly (Qiang)
 - Bug #404: AR would fail when CDbLogRoute uses the same DB connection (Qiang)
 - Bug: CMemCache has a typo when using memcached (Qiang)
 - Bug: COciCommandBuilder is referencing undefined variable (Qiang)
 - Bug: yiic webapp may generate incorrect path to yii.php (Qiang)
 - Bug: SQL with OFFSET generated by command builder for Oracle is incorrect (Qiang)
 - Bug: yiic shell model command may fail when a foreign key is named as ID (Qiang)
+- Bug: yiic shell controller command does not generate correct controller class file when the controller is under a sub-folder (Qiang)
 - Chg #391: defaultScope should not be applied to UPDATE (Qiang)
 - New #360: Added anchor parameter to CController::redirect (Qiang)
+- New #375: Added support to allow logout a user without cleaning up non-auth session data (Qiang)
 - New #378: Added support to allow dynamically turning off and on log routes (Qiang)
 - New #396: Improved error display when running yiic commands (Qiang)
+- New #406: Added support to allow stopping saving and deletion by an ActiveRecord behavior (Qiang)
 - New: Rolled back the change about treating tinyint(1) in MySQL as boolean (Qiang)
 - New: Added support for displaying call stack information in trace messages (Qiang)
 - New: Added 'index' option to AR relations so that related objects can be indexed by specific column value (Qiang)
